fix: isPortaitPhone 状态下 body 添加 height:100vh 和 overflow:hidden

--- a/src/index.sass
+++ b/src/index.sass
@@ -3,6 +3,10 @@ $variable-prefix: jgui-
 @import "../node_modules/bootstrap/scss/bootstrap-reboot.scss"
 @import "../node_modules/bootstrap/scss/bootstrap-grid.scss"
 
+body.is-portait-phone
+  height: 100vh
+  overflow: hidden
+
 .normal-layout
   &.main-container
     gap: 20px
